--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,26 @@ a:focus {
       font-size: 35px;
   }
 }
+.text-center .card {
+  width:  75%;
+  padding: 5%;
+}
+.text-center img{
+  width: 100%;
+}
 
+
+
+.text-center .icon{
+  font-size: 50px;
+}
+.text-center span{
+  font-size: 20px;
+}
+.content-column p {
+  line-height: 2.5; /* Adjust the value for desired line spacing */
+font-weight: bold;
+}
 
 /*******************************/
 /********** Fact CSS ***********/
