--- a/css/style.css
+++ b/css/style.css
@@ -1593,7 +1593,7 @@ a:focus {
   }
 }
 /* Pollcontact */
-#Reports.card {
+#Reports .card {
   width:  75%;
   padding: 5%;
 }
@@ -1603,7 +1603,11 @@ a:focus {
 .text-center p{
   
 }
-
+.paragraphStyle {
+  line-height: 2.3; 
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
  .card .titel{
 font-size: 25px;
 font-weight: bold;
@@ -1884,3 +1888,27 @@ margin: 0px;
     flex: 1 1 100%; /* Full width on small screens */
   }
 }
+
+
+/* header rebort */
+
+.header-background {
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,121,124,1) 35%, rgb(2, 39, 46) 100%);
+  padding: 40px 0;
+  color: white;
+}
+
+.header-content {
+  text-align: left;
+}
+
+.header-subtitle {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.header-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
