--- a/css/style.css
+++ b/css/style.css
@@ -339,12 +339,16 @@ a:focus {
 
 .carousel .carousel-text h1 {
   text-align: center;
-  color: #ffffff;
-  font-size: 60px;
+  color:  #0a90ef;
+  font-size: 120px;
   font-weight: 200;
   margin-bottom: 20px;
 }
-
+.carousel .carousel-text h6{
+  margin-top: 0;
+  color: white;
+  font-size: 15px;
+}
 .carousel .carousel-text p {
   color: #ffffff;
   text-align: center;
@@ -446,9 +450,11 @@ a:focus {
   }
   
   .carousel .carousel-text h1 {
-      font-size: 35px;
+      font-size: 100px;
   }
-  
+  .carousel .carousel-text h6 {
+    font-size: 16px;
+}
   .carousel .carousel-text p {
       font-size: 16px;
   }
@@ -457,6 +463,7 @@ a:focus {
       padding: 12px 30px;
       font-size: 15px;
       letter-spacing: 0;
+      margin-top: 23px
   }
 }
 
@@ -467,9 +474,9 @@ a:focus {
       height: calc(100vh - 70px);
   }
   
-  .carousel .carousel-text h1 {
+  /* .carousel .carousel-text h1 {
       font-size: 30px;
-  }
+  } */
   
   .carousel .carousel-text .btn {
       padding: 10px 25px;
@@ -1613,7 +1620,10 @@ font-size: 25px;
 font-weight: bold;
 
 }
-
+.icon{
+  font-size: 40px;
+  margin-top: 5%;
+}
 
 /* SERVICE */
 .service .card .titel{
@@ -1915,4 +1925,63 @@ margin: 0px;
   margin: 0.5rem  0;
   border: none;
   border-top: 2px solid #0d6efd; /* Adjust color as needed */
+}
+
+
+
+.pdf-scroll-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pdf-page {
+  margin-bottom: 10px;
+}
+
+.pdf-container {
+  width: 50%;
+  max-height: 80vh; /* Adjust the height as needed */
+  overflow-y: auto;
+  border: 1px solid #ddd; /* Optional: Add a border */
+  padding: 10px; /* Optional: Add some padding */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+margin-left: auto;
+}
+
+.pdf-scroll-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pdf-page {
+  margin-bottom: 10px;
+  width: 100%; /* Make PDF pages take the full width of the container */
+  max-width: 700px; /* Maximum width for larger screens */
+}
+
+@media (max-width: 768px) {
+  .pdf-container {
+    width: 100%; /* Adjust the width for smaller screens */
+    max-height: 70vh; /* Adjust the height for smaller screens */
+  }
+
+
+  .pdf-page {
+    max-width: 100%; /* Ensure it stays within the container */
+  }
+}
+
+@media (max-width: 480px) {
+  .pdf-container {
+    max-height: 60vh; /* Adjust the height for smaller screens */
+  }
+
+  .pdf-page {
+    max-width: 100%; /* Ensure it stays within the container */
+  }
 }
